--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^5.0.0",
     "@mdi/font": "^7.1.96",
+    "@nuxtjs/pwa": "^3.3.5",
     "@pinia/nuxt": "^0.4.6",
     "sass": "^1.58.0",
     "vuetify": "^3.1.3"
