--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": ">=19.0.0"
   },
   "devDependencies": {
-    "nuxt": "^3.1.1"
+    "nuxt": "^3.13.1"
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^5.0.0",
@@ -19,7 +19,8 @@
     "@nuxtjs/pwa": "^3.3.5",
     "@pinia/nuxt": "^0.4.6",
     "sass": "^1.58.0",
-    "vuetify": "^3.1.3"
+    "vuetify": "^3.7.1",
+    "vuetify-nuxt-module": "^0.18.2"
   },
   "license": "MIT"
 }
