--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "@pinia/nuxt": "^0.4.6",
     "sass": "^1.58.0",
+    "vee-validate": "^4.13.2",
     "vuetify": "^3.7.1",
     "vuetify-nuxt-module": "^0.18.2"
   },
